force-app/main/default/objects/Account/fields/DM_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>