force-app/main/default/objects/Account/fields/DM_Certified_Organic_Supplier__c.field-meta.xml
<CustomField>
    <fullName>DM_Certified_Organic_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Organic Supplier</label>
    <type>Checkbox</type>
</CustomField>