force-app/main/default/objects/Account/fields/DM_Non_GMO_Verified__c.field-meta.xml
<CustomField>
    <fullName>DM_Non_GMO_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-GMO Verified</label>
    <type>Checkbox</type>
</CustomField>