force-app/main/default/objects/Account/fields/DM_OMRI_Listed__c.field-meta.xml
<CustomField>
    <fullName>DM_OMRI_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OMRI Listed</label>
    <type>Checkbox</type>
</CustomField>