force-app/main/default/objects/Account/fields/DM_Planting_Count__c.field-meta.xml
<CustomField>
    <fullName>DM_Planting_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Planting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>