force-app/main/default/objects/Account/recordTypes/DM_Customer.recordType-meta.xml
<RecordType>
    <fullName>DM_Customer</fullName>
    <active>true</active>
    <description>Businesses that purchase products from a Farm.</description>
    <label>Customer</label>
</RecordType>