force-app/main/default/objects/Account/recordTypes/DM_Farm_Owner.recordType-meta.xml
<RecordType>
    <fullName>DM_Farm_Owner</fullName>
    <active>true</active>
    <description>Business entities that own farms.</description>
    <label>Farm Owner</label>
</RecordType>