force-app/main/default/objects/Account/recordTypes/DM_Vendor.recordType-meta.xml
<RecordType>
    <fullName>DM_Vendor</fullName>
    <active>true</active>
    <description>Businesses that sell goods and services to Farms.</description>
    <label>Vendor</label>
</RecordType>