force-app/main/default/objects/Account/listViews/DM_Customer.listView-meta.xml
<ListView>
    <fullName>DM_Customer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.DM_Customer</value>
    </filters>
    <label>Customers</label>
</ListView>