force-app/main/default/objects/Account/listViews/DM_Farm_Owner.listView-meta.xml
<ListView>
    <fullName>DM_Farm_Owner</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.DM_Farm_Owner</value>
    </filters>
    <label>Farm Owners</label>
</ListView>