force-app/main/default/objects/Account/listViews/DM_Vendors.listView-meta.xml
<ListView>
    <fullName>DM_Vendors</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.DM_Vendor</value>
    </filters>
    <label>Vendors</label>
</ListView>